<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_device_default"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_rooms"
        android:icon="@drawable/ic_device_default"
        android:title="@string/nav_rooms" />
    
    <item
        android:id="@+id/nav_scenes"
        android:icon="@drawable/ic_device_default"
        android:title="@string/nav_scenes" />
    
    <item
        android:id="@+id/nav_automation"
        android:icon="@drawable/ic_device_default"
        android:title="@string/nav_automation" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_device_default"
        android:title="@string/nav_profile" />
</menu> 
 
 
 