<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.tuya.smart.bizubundle.demo.ui.components.GlassmorphicCardView
        android:id="@+id/device_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        app:cardCornerRadius="@dimen/radius_large"
        app:cardElevation="@dimen/elevation_medium"
        app:showGlow="true"
        app:glowColor="@color/glass_border">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Status Indicator -->
            <View
                android:id="@+id/status_indicator"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/status_indicator_online" />

            <!-- Device Icon -->
            <ImageView
                android:id="@+id/device_icon"
                android:layout_width="@dimen/icon_large"
                android:layout_height="@dimen/icon_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:contentDescription="@string/device_icon"
                android:src="@drawable/ic_device_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/text_primary" />

            <!-- Device Name -->
            <TextView
                android:id="@+id/device_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/device_name_placeholder"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.App.Body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_icon"
                tools:text="Living Room Light" />

            <!-- Device Status -->
            <TextView
                android:id="@+id/device_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/status_offline"
                android:textAppearance="@style/TextAppearance.App.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_name"
                tools:text="Offline" />

            <!-- Quick Action Icon -->
            <ImageView
                android:id="@+id/quick_action_icon"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:contentDescription="@string/quick_action"
                android:src="@drawable/ic_quick_action"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/text_primary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.tuya.smart.bizubundle.demo.ui.components.GlassmorphicCardView>

</merge> 
 
 
 